objects/Case.object
<CustomObject>
    <fields>
        <fullName>Update_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Email_Template__c</fullName>
        <description>09032019 LG@IC Sets email template ID for button to use</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Conga Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Certificate_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Date Certificate Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Course_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Date Course Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Credit_Requested__c</fullName>
        <label>Full Credit Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I am claiming partial credit for this activity.</fullName>
                </value>
                <value>
                    <fullName>I successfully completed the entire activity and am claiming full credit.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Participant Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Conga_Certificate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Use Conga Certificate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Accreditation__c</fullName>
        <label>Activity Accreditation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCME</fullName>
                </value>
                <value>
                    <fullName>ANCC</fullName>
                </value>
                <value>
                    <fullName>ACCME/ANCC</fullName>
                </value>
                <value>
                    <fullName>SHRM</fullName>
                </value>
                <value>
                    <fullName>SHRM/ANCC</fullName>
                </value>
                <value>
                    <fullName>SHRM/ACCME</fullName>
                </value>
                <value>
                    <fullName>SHRM/ACCME/ANCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground_up_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground up Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_vendor_case_ID__c</fullName>
        <description>Maps to old field on EventAction  	
Case ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Outside vendor case ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partial_Credit_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partial Credit Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Participant First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Activity_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Activity Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E2CP__Latest_Inbound_BH__c</fullName>
        <description>When the Enable Latest Inbound BH setting is enabled in setup, this field is populated with the current state of Business Hours each time a new inbound email is received through Email to Case Premium. Consider using this field in your rule criteria for Auto-Response rules (or other automation such as Flows) to send appropriate emails based on whether the current time falls inside or outside of Business Hours.</description>
        <label>Latest Inbound BH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inside of Business Hours</fullName>
                </value>
                <value>
                    <fullName>Outside of Business Hours</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IUD_Training_Components__c</fullName>
        <label>IUD Training Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hands on IUD placement with ARMS PelvicSim</fullName>
                </value>
                <value>
                    <fullName>Complicated Cases didactic</fullName>
                </value>
                <value>
                    <fullName>Bimanual exam training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Degree_picklist__c</fullName>
        <label>Medical Degree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MD/DO</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>CNM</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>LPN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Live_Activity_Credit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Live Activity Credit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Degree_Get_Credit__c</fullName>
        <description>Used for Click tools to set what Medical Degree get full credit certs.</description>
        <inlineHelpText>Used for Click tools to set what Medical Degree get full credit certs.</inlineHelpText>
        <label>Medical Degree Get Credit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANCC</fullName>
                </value>
                <value>
                    <fullName>ACCME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Transfer_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Transfer Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Name_and_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Name and Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracts_Reviewed_by_ARMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Reviewed by ARMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objection_to_Participation__c</fullName>
        <label>Objection to Participation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Contract__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistance_Transporting_Sim__c</fullName>
        <label>Assistance Transporting Sim?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plumbing_or_Piping_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plumbing or Piping Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Medical_Credit_Requested__c</fullName>
        <label>Non-Medical Credit Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pelvic Sim</fullName>
                </value>
                <value>
                    <fullName>SHRM Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Construction_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Construction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Builders_Risk_Coverage_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Builders Risk Coverage Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracting_Party_Counterpart__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contracting Party/Counterpart</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Include_Exterior_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Include Exterior Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Include_Interior_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Include Interior Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Security_Measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction Security Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_of_Construction__c</fullName>
        <label>Estimated Cost of Construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Credential_Company__c</fullName>
        <description>Mapps to even action 	
Third Party Credential Company</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Third Party Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Credential_Contact__c</fullName>
        <description>Mapps to Even action 	
Third Party Credential Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Third Party Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_End_Date_of_Construction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected End Date of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date_of_Construction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Start Date of Construction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excavation_or_Subsurface_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excavation or Subsurface Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Address_of_Company_Req_Builders_R__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name/Address for Builders Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Const_Company_Certificates_of_Liability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Const Company Certificates of Liability</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>ADSC</fullName>
        <active>true</active>
        <businessProcess>Experience Cloud</businessProcess>
        <label>ADSC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contracts</fullName>
        <active>true</active>
        <businessProcess>Contracts</businessProcess>
        <description>Contract Case type for approvals@armsinc.org email</description>
        <label>Contracts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_Record_Updates</fullName>
        <active>true</active>
        <businessProcess>INS</businessProcess>
        <label>Property Updates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_Contact_Updates</fullName>
        <active>true</active>
        <businessProcess>CAL</businessProcess>
        <label>Team Updates</label>
    </recordTypes>
</CustomObject>